@@ -1,6 +1,7 @@
 0.7.0 - 0.7.1
 ----------
 *  (pycsp.greenlets) Fixed issue with communicating on channels from the main namespace.
+*  (pycsp.greenlets) Fixed propagation of exceptions from io functions.
 
 0.6.2 - 0.7.0
 ----------
